Fixed timer on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,8 @@
 }
 
 .date {
-  filter: drop-shadow(2px 2px 0 #000);
+  filter: drop-shadow(2px 2px 2 #FFF);
+  text-shadow: 0px 5px 0px white !important;
 }
 .unit {
   display: inline-block;
